[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-bot"
version = "0.2.0"
description = "Playwright automation for Arc Network daily tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.40,<2.0",
  "python-socks>=2.4,<3.0",
]

[project.scripts]
arc-bot = "arc_bot.cli:main_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
